加大客户端内存